package com.example.buecherrei.domain;

public enum BookGenre {
    Novel,
    Biography,
    Science_Fiction,
    Fantasy,
    Thriller,
    Comic,
    Romance
}
