package com.example.buecherrei.domain;

public enum MembershipType {
    VIP_Membership,
    Plus_Membership,
    Standard_Membership
}
