package com.example.buecherrei.domain;

public enum MovieGenre {
    Action,
    Comedy,
    Horror,
    Romance,
    Drama
}
